2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make text/x-readme have a weight
	of 10 (very low) so README.pdf doesn't get matched with
	text/x-readme

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/bathead.sk:
	* tests/list: Add image/x-skencil mime-type for Skencil
	files, with help from Tim Beaulen <tbscope@gmail.com>
	(Closes: #16050)

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix build

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Josselin Mouette
	<joss@debian.org> to avoid problems when detecting Matroska
	files by data, create a new application/x-matroska mime-type,
	and make video/x-matroska and audio/x-matroska subclasses of it
	(Closes: #16144)

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/test.php: Add a test case for PHP files, from
	https://bugs.freedesktop.org/show_bug.cgi?id=16228

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix make check

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Sebastian Dröge
	<slomo@circular-chaos.org> to add *.m3u8 as a glob for m3u files
	(Closes: #16143)

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add text/rtf as an alias for application/rtf
	(Closes: #16270)

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info-spec.xml: Update version to 0.17, as we added the
	compact tree suffix

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add weight to the DTD (patch by Matthias)
	* shared-mime-info-spec.xml:
	* update-mime-database.c (insert_suffix), (write_suffix_entries),
	(write_suffix_cache): 	Patch by Matthias Clasen
	<mclasen@redhat.com> to implement the compact suffix tree

2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix pack200 magic, remove useless gtkrc