@@ -54,6 +54,8 @@ ocf10-20060911.epub application/epub+zip
 test.wps application/vnd.ms-works ox
 # Copied from https://artcontext.net/art/01/mime/docs/show.php?type=application%2Fandrew-inset&js=
 internet.ez application/andrew-inset ox
+# Copied from http://extensions.services.openoffice.org/project/anaphraseus
+Anaphraseus-1.21-beta.oxt application/vnd.openofficeorg.extension ox
 
 # Playlist, subtitle and audio formats
 stream.nsc application/x-netshow-channel
